The Html structure of the code has been built to 50%

--- a/index.html
+++ b/index.html
@@ -15,6 +15,102 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        
+        <div id="header">
+            <ul>
+                <a href="#one"><li>Home</li></a>
+                <a href="#two"><li>About</li></a>
+                <a href="#three"><li>Hobbies</li></a>
+                <a href="#four"><li>Note</li></a>
+                <a href="#five"><li>Work Experience</li></a>
+                <a href="#six"><li>Contact</li></a>
+            </ul>
+        </div>
+        <div id="main">
+        <section id="one">
+            <div id="home_heading">
+                <h1>Meet Norma Forson</h1>
+                <h3>An Electrical Engineer</h3>
+            </div>
+        </section>
+
+        <section id="two">
+            <div id="two_one">
+                <h1>01</h1>
+                <h1>Meet Norma Forson</h1>
+            </div>
+            <div id="two_two">
+                <img src="" alt="image of Norma Forson">
+            </div>
+        </section>
+
+        <section id="three">
+            <div>
+                <h1>02</h1>
+                <h1>Norma's Hobbies</h1>
+            </div>
+            <div>
+                <div>
+                    <img src="" alt="">
+                    <h2>Picture 2</h2>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h2>Picture 2</h2>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h2>Picture 2</h2>
+                </div>
+            </div>
+        </section>
+
+        <section id="four">
+            <div>
+                <h1>some stuff</h1>
+                <br>
+                <br>
+                <h3>-dnwundwi</h3>
+            </div>
+        </section>
+
+        <section id="five">
+            <div>
+                <h1>03</h1>
+                <h1>some title</h1>
+            </div>
+            <div id="internships">
+                <img>
+                <h2>image title</h2>
+                <p>Information on picture</p>
+            </div>
+            <div id="internships">
+                <img>
+                <h2>image title</h2>
+                <p>Information on picture</p>
+            </div>
+            <div id="internships">
+                <img>
+                <h2>image title</h2>
+                <p>Information on picture</p>
+            </div>
+        </section>
+        <section id="six">
+            <div></div>
+            <div>
+                <h1>04</h1>
+                <h1>Contact<br> details</h1>
+            </div>
+            <div>
+                <div><h3>Email Address</h3>
+                    <a><h3>lll@gmail.com</h3></a>
+                </div>
+                <div><h3>Phone Number</h3>
+                    <a><h3>12345678</h3></a>
+                </div>
+                <div><h3>Mailing Address</h3>
+                    <a><h3>sjnnwibskjdc wj</h3></a>
+                </div>
+        </section>
+    </div>
     </body>
 </html>
