Make frameworks for first 3 sections

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <a href="#six"><li>Contact</li></a>
             </ul>
         </div>
+
         <div id="main">
         <section id="one">
             <div id="home_heading">
@@ -48,20 +49,21 @@
                 <h1>02</h1>
                 <h1>Norma's Hobbies</h1>
             </div>
-            <div>
-                <div>
+            <div id="three_skills">
+                <div class="soft_skills_1">
                     <img src="" alt="">
                     <h2>Picture 2</h2>
                 </div>
-                <div>
+                <div class="soft_skills_1">
                     <img src="" alt="">
                     <h2>Picture 2</h2>
                 </div>
-                <div>
+                <div class="soft_skills_1">
                     <img src="" alt="">
                     <h2>Picture 2</h2>
                 </div>
             </div>
+            <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, porro.</p></div>
         </section>
 
         <section id="four">
@@ -94,6 +96,7 @@
                 <p>Information on picture</p>
             </div>
         </section>
+
         <section id="six">
             <div></div>
             <div>
@@ -111,6 +114,7 @@
                     <a><h3>sjnnwibskjdc wj</h3></a>
                 </div>
         </section>
+
     </div>
     </body>
 </html>
