--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
             <div>
                 <div class="contact_details">
                     <h3>Email Address</h3>
-                    <a href="" mailto="forson.norma@gmail.com" cc="norma.forson@ashesi.edu.gh"><b>forson.norma@gmail.com</b></a>
+                    <a target="_blank" href="mailto:forson.norma@gmail.com" cc="norma.forson@ashesi.edu.gh"><b>forson.norma@gmail.com</b></a>
                 </div>
                 <div class="contact_details">
                     <h3>LinkedIn</h3>
-                    <a href="https://www.linkedin.com/in/norma-forson/"><h4>Norma's LinkedIn</h4></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/norma-forson/"><h4>Norma's LinkedIn</h4></a>
                 </div>
                 
             </div>
